[package]
name = "linapi"
version = "0.6.0"
authors = ["Diana"]
edition = "2021"
#
license = "MIT OR Apache-2.0"
description = "High level bindings to various Linux APIs and interfaces"
documentation = "https://docs.rs/linapi"
repository = "https://github.com/DianaNites/linapi"
readme = "README.md"
keywords = ["linux", "kernel", "modules"]
categories = ["api-bindings", "os::unix-apis"]

[dependencies]
nix = "0.23.1"
libc = "0.2.135"
bitflags = "1.3.2"
walkdir = "2.3.2"
thiserror = "1.0.37"
displaydoc = "0.2.3"
xmas-elf = "0.8.0"
flate2 = { version = "1.0.24", optional = true }
xz2 = { version = "0.1.7", optional = true }
zstd = { version = "0.11.2", optional = true }
anyhow = "1.0.65"

[features]
default = ["compression"]
compression = ["xz", "gz", "zst"]
xz = ["xz2"]
gz = ["flate2"]
zst = ["zstd"]

[badges]
maintenance = { status = "experimental" }

[[package.metadata.release.pre-release-replacements]]
file = "README.md"
search = "linapi = .*"
replace = "{{crate_name}} = \"{{version}}\""

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-header -->"
replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-url -->"
replace = "<!-- next-url -->\n[Unreleased]: https://github.com/DianaNites/linapi/compare/{{tag_name}}...HEAD"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "#![doc(html_root_url = .*"
replace = "#![doc(html_root_url = \"https://docs.rs/linapi/{{version}}\")]"
