[package]
name = "linapi"
version = "0.6.0"
authors = ["Diana"]
edition = "2021"
#
license = "MIT OR Apache-2.0"
description = "High level bindings to various Linux APIs and interfaces"
documentation = "https://docs.rs/linapi"
repository = "https://github.com/DianaNites/linapi"
readme = "README.md"
keywords = ["linux", "kernel", "modules"]
categories = ["api-bindings", "os::unix-apis"]

[dependencies]
nix = "0.25.0"
libc = "0.2.135"
bitflags = "1.3.2"
walkdir = "2.3.2"
thiserror = "1.0.37"
displaydoc = "0.2.3"
xmas-elf = "0.8.0"
flate2 = { version = "1.0.24", optional = true }
xz2 = { version = "0.1.7", optional = true }
zstd = { version = "0.11.2", optional = true }
anyhow = "1.0.66"
rustix = { version = "0.35.11", default-features = false, features = [
    "std",
    "fs",
    "process",
] }
# syscalls = { version = "0.6.7", default-features = false, features = ["std"] }
# flagset = "0.4.3"
# io-lifetimes = "0.7.3"

[features]
default = ["compression"]
compression = ["xz", "gz", "zst"]
xz = ["dep:xz2"]
gz = ["dep:flate2"]
zst = ["dep:zstd"]

[badges]
maintenance = { status = "experimental" }
