[package]
name = "linapi"
version = "0.5.3"
authors = ["Diana"]
edition = "2018"
#
license = "MIT OR Apache-2.0"
description = "High level bindings to various Linux APIs and interfaces"
documentation = "https://docs.rs/linapi"
repository = "https://github.com/DianaNites/linapi"
readme = "README.md"
keywords = ["linux", "kernel", "modules"]
categories = ["api-bindings", "os::unix-apis"]

[dependencies]
nix = "0.26.2"
libc = "0.2.144"
bitflags = "2.3.1"
walkdir = "2.3.3"
thiserror = "1.0.40"
displaydoc = "0.2.4"
flate2 = { version = "1.0.26", optional = true }
xz2 = { version = "0.1.7", optional = true }
zstd = { version = "0.12.3", optional = true }
elf = "0.7.2"
der = "0.7.6"
cms = "0.2.1"
rustix = { version = "0.37.19", features = ["process"] }

[features]
default = ["compression"]
compression = ["xz", "gz", "zst"]
xz = ["xz2"]
gz = ["flate2"]
zst = ["zstd"]

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
anyhow = "1.0.71"

[[package.metadata.release.pre-release-replacements]]
file = "README.md"
search = "linapi = .*"
replace = "{{crate_name}} = \"{{version}}\""

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-header -->"
replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-url -->"
replace = "<!-- next-url -->\n[Unreleased]: https://github.com/DianaNites/linapi/compare/{{tag_name}}...HEAD"
exactly = 1
